@@ -7,7 +7,15 @@ RTML.pm
 t/rtml.t
 t/build.t
 t/parse.t
+t/debugging.t
 Build/Makefile.PL
 Build/Build.pm
 Parse/Makefile.PL
 Parse/Parse.pm
+t/rtml/ia_observation_request.xml
+t/rtml/ia_score_request.xml
+t/rtml/ers_observations_complete.xml  
+t/rtml/ers_observation_accepted.xml  
+t/rtml/ers_score_reply.xml            
+t/rtml/ers_observation_rejected.xml  
+t/rtml/ers_target_observed.xml
