@@ -5,7 +5,7 @@ use strict;
 
 #load test
 use Test;
-BEGIN { plan tests => 1 };
+BEGIN { plan tests => 3 };
 
 # load modules
 use eSTAR::RTML;
@@ -19,3 +19,21 @@ use Data::Dumper;
 
 # test the test system
 ok(1);
+
+# Create an RTML object
+my $message = new eSTAR::RTML::Build( 
+                              Port => '2000',
+                              ID   => 'IA:aa@bofh.astro.ex.ac.uk:2000:0001'
+                              );
+
+# build a score request
+my $status = $message->score_observation();
+
+# check Port and id
+ok( $message->port(), 2000 );
+ok( $message->id(), 'IA:aa@bofh.astro.ex.ac.uk:2000:0001' );
+
+# dump out the request
+my $doc = $message->dump_rtml();
+
+print $doc;
